--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "crypto-js": "^4.1.1"
   },
   "name": "Story Iliad Network",
   "version": "1.0.0",
@@ -14,6 +15,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "crypto-js": "^4.1.1",
   "description": ""
 }
