--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
+  "name": "Story Iliad Network",
+  "version": "1.0.0",
+  "main": "index.js",   // 
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
     "prompt-sync": "^4.2.0",
     "crypto-js": "^4.1.1"
-  },
-  "name": "Story Iliad Network",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
