--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Story Iliad Network",
   "version": "1.0.0",
-  "main": "index.js",   // 
+  "main": "index.js",   
   "scripts": {
     "start": "node index.js"
   },
